<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.UserMenuFragment">

    <TextView
        android:id="@+id/userMenuWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_username"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userMenuViewBalanceButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/userMenuViewBalanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_balance"
        app:layout_constraintTop_toBottomOf="@id/userMenuWelcomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userMenuTransferFundsButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <Button
        android:id="@+id/userMenuTransferFundsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_funds"
        app:layout_constraintTop_toBottomOf="@id/userMenuViewBalanceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userMenuExchangeCalculatorButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <Button
        android:id="@+id/userMenuExchangeCalculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_exchange"
        app:layout_constraintTop_toBottomOf="@id/userMenuTransferFundsButton"
        app:layout_constraintBottom_toTopOf="@id/userMenuPayBillsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <Button
        android:id="@+id/userMenuPayBillsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_bills"
        app:layout_constraintTop_toBottomOf="@id/userMenuExchangeCalculatorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>